# dbt-tutorial

./: .pre-commit-config.yaml  Dockerfile  README.md  dbt_project.yml  pyproject.toml  requirements.txt
models/: sources.yml  sources_backup.yml
models/imdb/: actor_career_ratings.sql  actor_career_ratings.yml  average_tv_show_lifespan.sql  average_tv_show_lifespan.yml  common_runtime_by_genre.sql  common_runtime_ny_genre.yml  directors_highly_rated.sql  directors_highly_rated.yml  directors_highly_rated_extended.sql  directors_highly_rated_extended.yml  directors_rating_improvement.sql  directors_rating_improvement.yml  dominant_tv_genres.sql  dominant_tv_genres.yml  genre_ratings.sql  genre_ratings.yml  high_rated_genres.sql  high_rated_genres.yml  highest_rated_tv_shows.sql  highest_rated_tv_shows.yml  movie_ratings_by_decade.sql  movie_ratings_by_decade.yml  name_basics.sql  name_basics.yml  popular_90s_movies.sql  popular_90s_movies.yml  prolific_actors_by_genre.sql  prolific_actors_by_genre.yml  reviews.sql  reviews.yml  sci_fi_popularity.sql  sci_fi_popularity.yml  sequel_vs_original.sql  sequel_vs_original.yml  title_akas.sql  title_akas.yml  title_basics.sql  title_basics.yml  title_crew.sql  title_crew.yml  (+18 more)
profiles/: .user.yml  profiles.yml
seeds/: Test_for_DBT.csv  schema.yml
snapshots/: my_snapshot.sql
