[project]
name = "dbt-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Wang Ze",email = "wangzemarc@163.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-bigquery (>=1.9.1,<2.0.0)",
    "dbt-invoke (>=1.0.0,<2.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "dbt-core (>=1.9.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
